# upload-playlist

./: .gitignore  CLAUDE.md  PLUGININFO  README.md  __init__.py  install.sh  pyproject.toml  release.sh
.github/workflows/: ci.yml  release.yml
.tangled/workflows/: ci.yml  release.yml
docs/: architecture.md  nicotine-plugin-dev-reference.md  roadmap.md
tests/: conftest.py  test_data_dirs.py  test_extensions.py  test_history_db.py  test_init_lifecycle.py  test_smoke.py
