[project]
name = "upload-playlist"
version = "0.0.0"
description = "Nicotine+ plugin: live M3U playlist of audio files others download from you"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.basedpyright]
# Plugin loads inside the Nicotine+ host process; pynicotine isn't pip-installable
# and the script has no type annotations, so static checking is mostly noise.
typeCheckingMode = "off"
